# veyon

./: .gitignore  .gitmodules  1_configure-cmake.sh  2_build-package-distribution.sh  2a_build.sh  2a_install-dylibs-to-bundles.sh  2b_install-dylibs-to-bundles.sh  2b_package-apps.sh  2c_create-distribution.sh  2c_package-apps.sh  2d_create-distribution.sh  BUILD-MACOS.md  CMakeLists.txt  PACKAGING_INSTRUCTIONS.md  build-and-package.sh  configure-cmake.sh  create-distribution.sh  external_deps.txt  fix-installed-apps.sh  fix-worker-post-package.sh  grant-screen-recording-permissions.sh  install-dylibs-to-bundles.sh  package-veyon-macos-v2.sh  package-veyon-macos-v3.sh  package-veyon-macos.sh  quick-test-server.sh  test-server-direct.sh  verify-bundle-paths.sh
cli/: CMakeLists.txt
cli/src/: main.cpp
cmake/: MacOSXBundleInfo.plist.in
cmake/modules/: BuildVeyonApplication.cmake  BuildVeyonPlugin.cmake  FindLdap.cmake  FindLibVNCServer.cmake  FindQt5HttpServer.cmake  SetDefaultTargetProperties.cmake
configurator/: CMakeLists.txt
configurator/src/: main.cpp
core/src/: ConfigurationManager.cpp  CryptoCore.cpp  CryptoCore.h  FeatureWorkerManager.cpp  FeatureWorkerManager.h  Filesystem.cpp  Filesystem.h  ServiceControl.cpp  Toast.cpp  VeyonCore.cpp  VeyonServiceControl.cpp  VncClientProtocol.cpp  VncConnection.cpp  VncConnectionConfiguration.h  VncServerProtocol.cpp  VncView.cpp  VncView.h  VncViewWidget.cpp
core/src/Configuration/: LocalStore.cpp
master/: CMakeLists.txt
master/src/: MainWindow.cpp  main.cpp
plugins/ldap/: CMakeLists.txt
plugins/ldap/kldap/: CMakeLists.txt
plugins/networkcontrol/: CMakeLists.txt  NetworkControlFeaturePlugin.cpp  NetworkControlFeaturePlugin.h  README.md  WINDOWS-BUILD-GUIDE.md  build-and-package.sh  linux-build-and-package.sh  macos-build-and-package.sh  networkcontrol-installer.nsi  networkcontrol.pro  networkcontrol.qrc  veyon-network-control-sudoers  veyon-network-helper.sh  windows-build-installer.bat  windows-cross-compile-and-package.sh  windows-install-plugin.bat
plugins/platform/: CMakeLists.txt
plugins/platform/osx/: CMakeLists.txt  OsXCoreFunctions.cpp  OsXCoreFunctions.h  OsXFilesystemFunctions.cpp  OsXFilesystemFunctions.h  OsXInputDeviceFunctions.cpp  OsXInputDeviceFunctions.h  OsXKeyboardShortcutTrapper.h  OsXNetworkFunctions.cpp  OsXNetworkFunctions.h  OsXPlatformPlugin.cpp  OsXPlatformPlugin.h  OsXServiceFunctions.cpp  OsXServiceFunctions.h  OsXSessionFunctions.cpp  OsXSessionFunctions.h  OsXUserFunctions.cpp  OsXUserFunctions.h
plugins/platform/osx/auth-helper/: CMakeLists.txt  VeyonAuthHelper.cpp
plugins/textmessage/: TextMessageFeaturePlugin.cpp
plugins/vncserver/: CMakeLists.txt
plugins/vncserver/macvnc-builtin/: BuiltinMacVncServer.cpp  BuiltinMacVncServer.h  CMakeLists.txt  MacVncConfiguration.h  MacVncConfigurationWidget.cpp  MacVncConfigurationWidget.h  MacVncConfigurationWidget.ui
plugins/webapi/: CMakeLists.txt  WebApiHttpServer.cpp
resources/icons/: veyon-configurator.icns  veyon-master.icns  veyon-server.icns
scripts/: README.md  com.veyon.vnc.plist  install_veyon_vnc_agent.sh  launchAgents.sh  uninstall_veyon_vnc_agent.sh
server/: CMakeLists.txt  MacOSXBundleInfo.veyon-server.plist.in
server/src/: VncProxyServer.cpp  VncServer.cpp  main.cpp
service/: CMakeLists.txt
service/src/: main.cpp
tools/: fix_bundle_deps.py
translations/: veyon.ts  veyon_ar.ts  veyon_bg.ts  veyon_ca_ES.ts  veyon_cs.ts  veyon_de.ts  veyon_el.ts  veyon_es_ES.ts  veyon_et.ts  veyon_eu.ts  veyon_fa.ts  veyon_fr.ts  veyon_he.ts  veyon_hu.ts  veyon_id.ts  veyon_it.ts  veyon_ja.ts  veyon_ko.ts  veyon_lt.ts  veyon_lv.ts  veyon_mn.ts  veyon_nl.ts  veyon_no_NO.ts  veyon_pl.ts  veyon_pt_BR.ts  veyon_pt_PT.ts  veyon_ru.ts  veyon_sl.ts  veyon_sr.ts  veyon_sv.ts  veyon_th.ts  veyon_tr.ts  veyon_uk.ts  veyon_vi.ts  veyon_zh_CN.ts  veyon_zh_TW.ts
worker/: CMakeLists.txt
worker/src/: main.cpp
